--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tilt": "^1.0.2",
     "three": "^0.167.1"
   },
   "devDependencies": {
